--- a/kubernetes/nodejs/views/pages/index.ejs
+++ b/kubernetes/nodejs/views/pages/index.ejs
@@ -21,6 +21,7 @@
         </p>
         <p>
           Read the <a href="https://waypointproject.io/docs">documentation</a> for more about Waypoint.
+          Changed it yet again!!
         </p>
       </section>
       <footer>
